--- a/client/stylesheet/responsive.css
+++ b/client/stylesheet/responsive.css
@@ -1,4 +1,10 @@
-@media screen and (max-width: 900px) {
+@media (max-width: 900px) {
+  .menu-container{
+    display: flex !important;
+  }
+}
+
+@media screen and (min-width:480px) {
   .responosive-menu-bar{
     width: 100%;
     height: 10vh;
@@ -59,11 +65,5 @@
   }
   .course-information-column {
     font-size: 1em !important;
-  }
-}
-
-@media (min-width: 900px) {
-  .menu-container{
-    display: flex !important;
   }
 }
